--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile group: 'ch.qos.logback', name:'logback-classic', version: '1.2.3'
     compile group: 'ch.qos.logback', name:'logback-core', version: '1.2.3'
     compile group: 'com.codeborne', name: 'selenide', version: '5.15.1'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.141.59'
+
 }
 
 
