--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compile group: 'ch.qos.logback', name:'logback-core', version: '1.2.3'
     compile group: 'com.codeborne', name: 'selenide', version: '5.15.1'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.141.59'
-
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
 
 
